# fedora-galaxy-book-setup

./: .gitignore  Cargo.toml  Containerfile  Makefile  README.en.md  README.es.md  README.it.md  README.md
data/: com.caioregis.GalaxyBookSetup.desktop  com.caioregis.GalaxyBookSetup.metainfo.xml
packaging/fedora/: galaxybook-setup.spec
po/: en.po  es.po  galaxybook-setup.pot  it.po
scripts/: install-galaxybook-setup-launcher.sh
src/: about.rs  actions.rs  diagnostics.rs  i18n.rs  lib.rs  main.rs  ui.rs  updates.rs
src/actions/: bindings.rs  catalog.rs  mod.rs  rows.rs  runtime.rs
src/diagnostics/: mod.rs  runtime.rs
src/diagnostics/runtime/: mod.rs  notifications.rs  refresh.rs  suggested.rs
src/system/: commands.rs  mod.rs
src/ui/: about.rs  mod.rs  rows.rs
src/ui/window/: build.rs  groups.rs  mod.rs  pages.rs  shell.rs
