[package]
name = "galaxybook-setup"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0-only"
build = "build.rs"

[dependencies]
gettextrs = { package = "gettext-rs", version = "0.7", features = ["gettext-system"] }
gtk = { package = "gtk4", version = "0.10", features = ["v4_10"] }
libadwaita = { version = "0.8", features = ["v1_5"] }
